# aegipy

./: pyproject.toml  test.py
src/: common_datatypes.py  row.py  style.py
