[tool.poetry]
name = "aegipy"
version = "0.1.0"
description = ""
authors = ["Diabl <dath.vg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"
ass-tag-parser = "^2.4.1"
numpy = "^1.23.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
